--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+python-nose-parameterized (0.3.4-2) unstable; urgency=medium
+
+  * Using the new package long description from Guido Günther <agx@sigxcpu.org>,
+    big thanks a lot to him!
+
+ -- Thomas Goirand <zigo@debian.org>  Mon, 03 Nov 2014 17:42:55 +0800
+
 python-nose-parameterized (0.3.4-1) unstable; urgency=medium
 
   * Initial release. (Closes: #767515)
