--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-nose-parameterized (0.3.4-4) UNRELEASED; urgency=medium
+
+  * Fixed VCS URLs (https).
+
+ -- Ondřej Nový <novy@ondrej.org>  Sun, 28 Feb 2016 15:42:21 +0100
+
 python-nose-parameterized (0.3.4-3) unstable; urgency=medium
 
   [ Ivan Udovichenko ]
