--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 python-nose-parameterized (0.3.4-4) UNRELEASED; urgency=medium
 
   * Fixed VCS URLs (https).
+  * d/rules: Changed UPSTREAM_GIT protocol to https
 
  -- Ondřej Nový <novy@ondrej.org>  Sun, 28 Feb 2016 15:42:21 +0100
 
