--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-python-nose-parameterized (0.3.4-4) UNRELEASED; urgency=medium
+python-nose-parameterized (0.3.4-4) unstable; urgency=medium
 
   * Fixed VCS URLs (https).
   * d/rules: Changed UPSTREAM_GIT protocol to https
