--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-nose-parameterized (0.3.4-5) UNRELEASED; urgency=medium
+
+  * Bumped debhelper compat version to 10
+
+ -- Ondřej Nový <onovy@debian.org>  Thu, 24 Nov 2016 00:08:04 +0100
+
 python-nose-parameterized (0.3.4-4) unstable; urgency=medium
 
   * Fixed VCS URLs (https).
